bk_ida/gccida/g2/eiremain
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/eiremain/src/real.c:6220:12: error: expected expression
*( _OWORD *)equot = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/eiremain/src/real.c:6220:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)equot = 0LL; 
   ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/eiremain/src/obj/real.o] Error 1
